--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -426,13 +426,14 @@ table {
     margin: 0 auto;
 }
 
-table tr{
+table tr {
     background-color: #f8f8f8;
     border: 1px solid #ddd;
 
 }
 
-table th, table td{
+table th,
+table td {
     font-size: 14px;
     padding: 8px;
     text-align: center;
@@ -447,36 +448,36 @@ thead th {
     background-color: #ccc;
 }
 
-table tbody tr :hover{
+table tbody tr :hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-table tbody td :hover{
+table tbody td :hover {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-.Verde{
+.Verde {
     border: none;
 }
 
-.Rojo{
+.Rojo {
     border: none;
 }
 
-.note{
+.note {
     background-color: none;
 }
 
-.sizeCard{
-    width: 25rem; 
+.sizeCard {
+    width: 25rem;
     height: 17rem;
 }
 
-.borderImage{
+.borderImage {
     border-radius: 10px;
 }
 
-.lineaS{
+.lineaS {
     width: 90%;
     height: 3px;
     border: #0D4560;
@@ -485,16 +486,17 @@ table tbody td :hover{
     margin: 0 auto;
 }
 
-.formMarca, .formNombre{
+.formMarca,
+.formNombre {
     margin-left: 10px;
     margin-bottom: 5px;
 }
 
-.ContenedorTotalD{
+.ContenedorTotalD {
     height: 150%;
 }
 
-.formZapato{
+.formZapato {
     margin: 0 auto;
 }
 
@@ -502,29 +504,120 @@ table tbody td :hover{
     width: 80%;
 }
 
-.input-group-text{
+.input-group-text {
     margin: 0 auto;
 }
 
-.formGenero{
+.formGenero {
     margin: 0 auto;
 }
 
-.sizeCard1{
+.sizeCard1 {
     margin: 0 auto;
     width: 40%;
     height: 10%;
 }
 
 
-.btn4{
+.btn4 {
     width: 170px;
     height: 50px;
-    
     border-radius: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
     border: solid 0px;
     background-color: #0D4560;
 
+}
+
+#slider-container {
+	height: 500px;
+	width: 85vw;
+	max-width: 1400px;
+	position: relative;
+	overflow: hidden;
+	padding: 20px;
+    margin-top: 60px;
+}
+
+#slider-container .btn {
+	position: absolute;
+	top: calc(50% - 30px);
+	height: 30px;
+	width: 30px;
+	border-left: 10px solid #696969;
+	border-top: 10px solid #696969;
+	cursor: pointer;
+}
+
+#slider-container .btn:hover {
+	transform: scale(1.2);
+}
+
+#slider-container .btn.inactive {
+	border-color: #282828
+}
+
+#slider-container .btn:first-of-type {
+	transform: rotate(-45deg);
+	left: 10px
+}
+
+#slider-container .btn:last-of-type {
+	transform: rotate(135deg);
+	right: 10px;
+}
+
+#slider-container #slider {
+	display: flex;
+	width: 1000%;
+	height: 100%;
+	transition: all .5s;
+}
+
+#slider-container #slider .slide {
+	height: 90%;
+	margin: auto 10px;
+	background-color: #ffffff;
+	border-radius: 10px;
+	display: grid;
+	place-items: center;
+}
+
+#slider-container #slider .slide span {
+	color: rgb(0, 0, 0);
+	font-size: 30px;
+}
+
+.slide img {
+    width: 200px; /* Ancho de la imagen */
+    height: 200px; /* Alto de la imagen */
+    object-fit: cover;
+    box-sizing: border-box; /* Ajusta cómo se muestra la imagen */
+    border-radius: 10px;
+}
+
+
+@media only screen and (min-width: 1100px) {
+	#slider-container #slider .slide {
+		width: calc(2.5% - 20px);
+	}
+}
+
+@media only screen and (max-width: 1100px) {
+	#slider-container #slider .slide {
+		width: calc(3.3333333% - 20px);
+	}
+}
+
+@media only screen and (max-width: 900px) {
+	#slider-container #slider .slide {
+		width: calc(5% - 20px);
+	}
+}
+
+@media only screen and (max-width: 550px) {
+	#slider-container #slider .slide {
+		width: calc(10% - 20px);
+	}
 }
