--- a/recursos/estilos/privado/marcas.css
+++ b/recursos/estilos/privado/marcas.css
@@ -108,13 +108,6 @@ h1 {
     height: fit-content;
 }
 
-/* Estilo para elementos con clase .ContenedorTotalA */
-.ContenedorTotalA {
-    padding-top: 20px;
-    padding-left: 50px;
-    padding-right: 50px;
-}
-
 /* Estilo para elementos con clases .btn3 y .btn2 */
 .btn3,
 .btn2 {
@@ -143,17 +136,29 @@ h1 {
     color: white;
 }
 
-.sizeCard{
-    width: 15rem; 
-    height: 15rem;
+.sizeCard {
+    height: 150px;
+    width: 150px;
 }
 
-.borderImage{
+.sizeCard>img{
+    max-width: 150px;
+    aspect-ratio: 1/1;
+}
+
+.borderImage {
     border-radius: 10px;
+}
+
+.responsiveG{
+    max-width: 100%;
 }
 
 @media screen and (max-width: 700px) {
 
+    .responsiveG{
+        max-width: 200px;
+    }
     .ContenedorTotalA {
         padding: 5px;
     }
