--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -531,62 +531,36 @@ table tbody td :hover {
 }
 
 #slider-container {
-	height: 500px;
-	width: 85vw;
-	max-width: 1400px;
+    max-width: 100vw;
 	position: relative;
-	overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 	padding: 20px;
     margin-top: 60px;
 }
 
-#slider-container .btn {
-	position: absolute;
-	top: calc(50% - 30px);
-	height: 30px;
-	width: 30px;
-	border-left: 10px solid #696969;
-	border-top: 10px solid #696969;
-	cursor: pointer;
-}
-
-#slider-container .btn:hover {
-	transform: scale(1.2);
-}
-
-#slider-container .btn.inactive {
-	border-color: #282828
-}
-
-#slider-container .btn:first-of-type {
-	transform: rotate(-45deg);
-	left: 10px
-}
-
-#slider-container .btn:last-of-type {
-	transform: rotate(135deg);
-	right: 10px;
+/* Estilos para un contenedor de búsqueda */
+.search-container {
+    position: relative;
 }
 
 #slider-container #slider {
 	display: flex;
-	width: 1000%;
+    flex-wrap: wrap;
+	min-width: 100%;
 	height: 100%;
 	transition: all .5s;
 }
 
 #slider-container #slider .slide {
-	height: 90%;
+	min-height: 400px;
+    min-width: 300px;
 	margin: auto 10px;
 	background-color: #ffffff;
 	border-radius: 10px;
+    margin-top: 15px;
 	display: grid;
 	place-items: center;
-}
-
-#slider-container #slider .slide span {
-	color: rgb(0, 0, 0);
-	font-size: 30px;
 }
 
 .slide img {
