Index 100% - fill table - 100%

--- a/recursos/estilos/publico/index.css
+++ b/recursos/estilos/publico/index.css
@@ -22,6 +22,10 @@
     justify-content: center;
 }
 
+.fit{
+    width: fit-content;
+}
+
 /* Estilos del carrusel interno */
 .carruselA {
     min-height: 500px;
