Carrito arreglado y estado de pedido modificado para fecha actual

--- a/recursos/estilos/publico/carrito.css
+++ b/recursos/estilos/publico/carrito.css
@@ -15,6 +15,11 @@ button{
     background-color: transparent;
 }
 
+.modal-content {
+    background-color: #1A89BD;
+    color: white;
+}
+
 button:hover{
     background-color: gainsboro;
 }
