--- a/recursos/estilos/privado/zapatos.css
+++ b/recursos/estilos/privado/zapatos.css
@@ -46,15 +46,10 @@
     height: 100%;
     flex: 1;
     display: flex;
+    width: 100%;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    /* Alinea el contenido en el centro verticalmente */
-    overflow: hidden;
-    /* Evita que el contenido desborde del contenedor */
-    padding: 10px;
-    /* Ajusta el relleno según sea necesario */
-    box-sizing: border-box;
-    /* Asegura que el relleno se tenga en cuenta al calcular el tamaño del contenedor */
 }
 
 .rectangle {
@@ -76,22 +71,19 @@
 }
 
 .nav-item {
-    border-top-left-radius: 10px;
     background-color: #146A93;
+    border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     margin-bottom: -5px;
+    color: white;
 }
-
-.nav-link {
-    text-decoration: none;
-}
-
+/*
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-}
+}*/
 
 .ContenedorB {
     display: flex;
@@ -231,6 +223,13 @@ h4 {
     margin-bottom: 15px;
 }
 
+.ContenedorTotal {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 70%;
+    height: 100%;
+}
 
 
 .contenedor1A,
@@ -246,6 +245,7 @@ h4 {
     max-height: 100%;
 }
 
+/* Estilos para ContenedorForm */
 .ContenedorForm {
     background-color: white;
     width: 100%;
@@ -272,12 +272,12 @@ h4 {
 .form-select {
     border: #146A93 solid 1px;
 }
-
+/*
 .F1 {
     margin-top: 50px;
     margin-left: 50px;
     font-size: 20px;
-}
+}*/
 
 .nombreZapato {
     width: 30%;
@@ -292,13 +292,13 @@ h4 {
     margin-left: 60%;
 
 }
-
+/*
 .F2 {
     font-size: 20px;
     margin-left: 61%;
     margin-top: -8.5%;
 
-}
+}*/
 
 .generoZapato {
     width: 30%;
@@ -306,31 +306,30 @@ h4 {
     margin-left: 3%;
 
 }
-
+/*
 .F3 {
     font-size: 20px;
     margin-left: 50px;
     margin-top: 15px;
-}
+}*/
 
 .precioZapato {
     width: 30%;
     border: #1A89BD;
     margin-left: 60%;
 }
-
+/*
 .F4 {
     font-size: 20px;
     margin-left: 61%;
     margin-top: -8.5%;
-
-}
-
+}*/
+/*
 .F5 {
     font-size: 20px;
     margin-left: 50px;
     margin-top: 15px;
-}
+}*/
 
 .descZapato {
     width: 30%;
@@ -534,9 +533,10 @@ table tbody td :hover {
     max-width: 100vw;
 	position: relative;
     overflow-x: auto;
-    overflow-y: hidden;
+    overflow-y: auto;
+    max-height: 60vh;
 	padding: 20px;
-    margin-top: 60px;
+    margin-top: 20px;
 }
 
 /* Estilos para un contenedor de búsqueda */
@@ -555,7 +555,7 @@ table tbody td :hover {
 #slider-container #slider .slide {
 	min-height: 400px;
     min-width: 300px;
-	margin: auto 10px;
+	margin: 20px;
 	background-color: #ffffff;
 	border-radius: 10px;
     margin-top: 15px;
@@ -594,4 +594,25 @@ table tbody td :hover {
 	#slider-container #slider .slide {
 		width: calc(10% - 20px);
 	}
+}
+
+/* Estilos para los enlaces de la barra de navegación */
+.nav-link {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    border: 0px solid black;
+}
+
+/* Estilos para los enlaces de la barra de navegación */
+.nav-link:hover, .nav-item:active {
+    border: 0px solid black;
+}
+
+/* Estilos para el elemento con ID 'agregar' */
+#agregar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
