--- a/recursos/estilos/publico/tus_pedidos.css
+++ b/recursos/estilos/publico/tus_pedidos.css
@@ -158,6 +158,12 @@
     border: solid 0px;
 }
 
+/* Estilos para btn3 y btn2 */
+#btn4 {
+    background-color: #0c4864;
+    border: solid 0px;
+}
+
 /* Estilo específico para .btn3 */
 .btn3 {
     background-color: #146A93;
